--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
+    <link rel='stylesheet' href='./style.css'>
     <script src="./dist/main.js"></script>
+    <script>
+        let tg, im;
+        document.addEventListener('DOMContentLoaded', function (){
+            let tgContainer = document.getElementById('text-game');
+            tg = LYK.createTextGame(tgContainer);
+            im = tg.itemManager;
+        })
+    </script>
 </head>
 <body>
     <h1>Test!</h1>
+    <div id='text-game'></div>
     <canvas id='app' width="300" height="300"></canvas>
 </body>
 </html>
