테스트 추가

--- a/examples/item-add.html
+++ b/examples/item-add.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
-    <link rel='stylesheet' href='./style.css'>
-    <script src="./dist/main.js"></script>
-    <script src='./examples/example.js'></script>
+    <title>Item add Test</title>
+    <link rel='stylesheet' href='/style.css'>
+    <script src="/dist/main.js"></script>
+    <script src='./item-add.js'></script>
 </head>
 <body>
-    <h1>Test!</h1>
+    <h1>Item Add Test!</h1>
     <div id='test'></div>
-    <div id='text-game' ></div>
+    <div id='text-game'></div>
     <canvas id='app' width="300" height="300"></canvas>
 </body>
 </html>
